--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "bootswatch": "^5.3.1",
+    "chart.js": "^4.3.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
+    "ng2-charts": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
